#!/bin/sh
AC_INIT([Shell], [1.0], [jojofabe@gmail.com], 
		[Shell], [http://macmania.github.io/])
AC_PREREQ([2.65])
AC_CONFIG_SRCDIR(src/Shell.c)
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE
AC_PROG_CC
echo "Testing for a C compiler"
AC_LANG(C)
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT

